--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@imageengine/vue": "^0.1.3",
     "@videojs-player/vue": "^1.0.0",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vueup/vue-quill": "^1.2.0",
     "aos": "^2.3.4",
     "axios": "0.21.1",
@@ -37,6 +40,7 @@
     "vue-recaptcha": "^3.0.0-alpha.2",
     "vue-router": "^4.0.3",
     "vue-select": "^4.0.0-beta.6",
+    "vuelidate": "^0.7.7",
     "vuex": "^4.0.0",
     "xlsx": "^0.18.5"
   },
